@@ -35,6 +35,13 @@
 * Fixed a bug which raised an exception when the ``AdvancedSettingsForm``
   failed validation on certain fields.
 * Fixed a bug with widgets not initialising correctly sometimes
+* Fixed a tree corruption when moving a published page under a published one.
+* Fixed a tree corruption caused by ``fix-tree`` when an unpublished page is parent
+  to a published page.
+* Fixed an error when publishing a page that has an unpublished child page who is
+  parent to a published page.
+* Fixed a bug where moving a published page under a page marked as pending publishing
+  is left as published instead of being marked as pending publishing.
 
 
 === 3.3.2 (2016-08-11) ===
